--- a/projeto-travelgram/styles/global.css
+++ b/projeto-travelgram/styles/global.css
@@ -33,3 +33,13 @@ a{
 a:hover{
   color: var(--brand-color);
 }
+
+.conteiner {
+  padding-inline: 32px;
+  max-width: 1280px;
+  margin-inline: auto;
+}
+
+.bg-surface-color {
+  background-color: var(--surface-color);
+}
