--- a/curso-guanabara/desafios/desafio010/estilo/style.css
+++ b/curso-guanabara/desafios/desafio010/estilo/style.css
@@ -48,7 +48,15 @@ nav {
 }
 
 main {
+  min-width: 300px;
+  max-width: 1000px;
+  margin: auto;
+  margin-bottom: 30px;
+  padding: 20px;
   background-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.45);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 main h1 {
@@ -58,6 +66,17 @@ main h1 {
 
 main h2 {
   font-family: var(--font-android);
+}
+
+main img {
+  width: 100%;
+}
+
+main img.pequena {
+  width: 50%;
+  display: block;
+  margin: auto;
+
 }
 
 footer {
