--- a/curso-guanabara/desafios/desafio010/estilo/style.css
+++ b/curso-guanabara/desafios/desafio010/estilo/style.css
@@ -31,20 +31,51 @@ body {
 }
 
 header {
-  background-color: var(--cor4);
+  background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+  min-height: 150px;
+  text-align: center;
+  padding-top: 40px;
+  
 }
 
 header h1 {
   color: white;
   font-family: var(--font-destaque);
+  font-size: 3em;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.261);
 }
 
 header p {
   color: white;
+  font-size: 1.2em;
+  font-family: var(--font-padrao);
+  max-width: 500px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: auto;
+  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.36);
 }
 
 nav {
   background-color: var(--cor5);
+  padding: 10px;
+  box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.204);
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-right: 30px;
+  font-weight: bold;
+  padding: 5px;
+  transition-duration: 0.5s;
+}
+
+ nav a:hover {
+  background-color: var(--cor2);
+  border-radius: 5px;
+  color: var(--cor4);
 }
 
 main {
