--- a/curso-guanabara/desafios/desafio010/estilo/style.css
+++ b/curso-guanabara/desafios/desafio010/estilo/style.css
@@ -30,6 +30,7 @@ body {
   font-family: var(--font-padrao);
 }
 
+
 header {
   background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
   min-height: 150px;
@@ -66,13 +67,13 @@ nav {
 nav a {
   color: white;
   text-decoration: none;
-  margin-right: 30px;
+  margin-right: 10px;
   font-weight: bold;
   padding: 5px;
   transition-duration: 0.5s;
 }
 
- nav a:hover {
+nav a:hover {
   background-color: var(--cor2);
   border-radius: 5px;
   color: var(--cor4);
@@ -97,14 +98,43 @@ main h1 {
 
 main h2 {
   font-family: var(--font-android);
+  color: var(--cor4);
+  font-size: 1.3em;
+  background-image: linear-gradient(to right, var(--cor1), transparent);
+  text-indent: 8px;
+}
+
+main p {
+  margin: 15px 0px;
+  text-align: justify;
+  text-indent: 30px;
+  line-height: 2em;
+}
+
+main strong {
+  color: var(--cor4);
+  font-weight: bold;
+}
+
+main a {
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--cor5);
+  background-color: var(--cor1);
+  padding: 2px 6px;
+}
+
+main a:hover {
+  text-decoration: underline;
+  color: var(--cor4);
 }
 
 main img {
   width: 100%;
 }
 
-main img.pequena {
-  width: 50%;
+.pequena {
+  max-width: 350px;
   display: block;
   margin: auto;
 
