--- a/curso-guanabara/desafios/desafio010/estilo/style.css
+++ b/curso-guanabara/desafios/desafio010/estilo/style.css
@@ -30,6 +30,9 @@ body {
   font-family: var(--font-padrao);
 }
 
+.externo::after {
+  content: '\00A0\1F517';
+}
 
 header {
   background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
@@ -42,6 +45,7 @@ header {
 header h1 {
   color: white;
   font-family: var(--font-destaque);
+  font-weight: normal;
   font-size: 3em;
   margin-bottom: 20px;
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.261);
@@ -55,6 +59,7 @@ header p {
   padding-left: 10px;
   padding-right: 10px;
   margin: auto;
+  margin-bottom: 20px;
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.36);
 }
 
@@ -65,7 +70,7 @@ nav {
 }
 
 nav a {
-  color: white;
+  color: var(--cor1);
   text-decoration: none;
   margin-right: 10px;
   font-weight: bold;
@@ -94,6 +99,8 @@ main {
 main h1 {
   color: var(--cor5);
   font-family: var(--font-android);
+  font-weight: normal;
+  font-size: 1.8em;
 }
 
 main h2 {
@@ -102,6 +109,7 @@ main h2 {
   font-size: 1.3em;
   background-image: linear-gradient(to right, var(--cor1), transparent);
   text-indent: 8px;
+  font-weight: normal;
 }
 
 main p {
@@ -140,7 +148,59 @@ main img {
 
 }
 
+.video {
+  background-color: var(--cor5);
+  margin: 0px -20px 30px -20px;
+  padding: 20px;
+  padding-bottom: 59%;
+
+  position: relative;
+}
+
+.video iframe {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: 90%;
+  height: 90%;
+}
+
+aside {
+  background-color: var(--cor1);
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.409);
+}
+
+aside ul {
+  list-style-type: '\2714\00A0\00A0';
+  list-style-position: inside;
+  columns: 2;
+}
+
+aside h3 {
+  background-color: var(--cor4);
+  color: white;
+  padding: 10px;
+  margin: -10px -10px 0px -10px;
+  border-radius: 10px 10px 0px 0px;
+}
+
 footer {
   background-color: var(--cor5);
   color: white;
+  text-align: center;
+  font-size: 0.8em;
+  padding: 5px;
+}
+
+footer a {
+  color: white;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color: #83e1ad;
 }
