--- a/curso-guanabara/desafios/desafio010/estilo/style.css
+++ b/curso-guanabara/desafios/desafio010/estilo/style.css
@@ -47,7 +47,7 @@ header h1 {
   font-family: var(--font-destaque);
   font-weight: normal;
   font-size: 3em;
-  margin-bottom: 20px;
+  padding-bottom: 50px;
   text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.261);
 }
 
