Atualizei exercícios capítulo 19

--- a/projetos-rocketseat/projeto-travelgram/styles/global.css
+++ b/projetos-rocketseat/projeto-travelgram/styles/global.css
@@ -25,6 +25,10 @@ body {
   background-color: var(--background-color);
 }
 
+ul {
+  list-style-type: none;
+}
+
 a{
   text-decoration: none;
   color: inherit;
